Updated folder name

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 MONGO_URL=mongodb+srv://kanika22100:5ZpZWSXnfVlqLReM@codearena.bldzhom.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET=k2V#7pX9!mQz@4sT$wR8^uY1*eL3&fG6
+JWT_SECRET=k2Vg7pX9!mQz@4sT$wR8^uY1*eL3&fG6
 GEMINI_API_KEY=AIzaSyBt_2I0GS6LFyMPt4RWGoSjlcohxrhTw5k
 COMPILER_URL=http://13.60.89.214:4000
 PORT=5000
